<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/welcome_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_header" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addButton"
        android:layout_weight="1"
        android:layout_gravity="left"
        android:text="@string/add_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/removeButton"
        android:layout_weight="1"
        android:layout_gravity="right"
        android:text="@string/remove_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pauseButton"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:text="@string/pause_button"/>
    </TableRow>
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/llContentWindow"
        android:animateLayoutChanges="true">
        </LinearLayout>
</ScrollView>
<!--633861373 Cisco case number - RMA 86343092  -->


</LinearLayout>
